<resources>
    <string name="app_name">SAC Android Java</string>

    <!-- Used for the Intro -->
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="slide_1_title">Add Events!</string>
    <string name="slide_1_desc">The easiest way to manage Events!</string>
    <string name="slide_2_title">Enroll Easily</string>
    <string name="slide_2_desc">Enroll for events with your friends!</string>
    <string name="slide_3_title">Practice Sessions</string>
    <string name="slide_3_desc">Get Regular Updates for Practice Sessions</string>
    <string name="slide_4_title">Get Started</string>
    <string name="slide_4_desc">SAC Portal | IIT Mandi!</string>
    <!-- Yet to Make this part -->
    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>

    <!-- Used for Login Activities -->
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="register_action">Register</string>
    <string name="action_sign_in_short">Sign in</string>

    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="new_user">New User? </string>
    <string name="loginHeading">SAC Portal</string>
    <string name="register_here">Register Here.</string>
    <string name="show_password">Show Password</string>

    <string name="forgot_password">Forgot Password?</string>
    <string name="get_sign_in_help">Get Help Signing in.</string>

    <string name="logout">Logout</string>
</resources>
